--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,35 @@
 controllers:
     resource: ../src/Controller/
     type: attribute
+
+home:
+    path: /
+    controller: App\Controller\HomeController::accueil
+
+# produit:
+#     path: /produit/{id<\d{1,3}>?0}
+#     controller: App\Controller\ProduitController::affiche
+    # defaults:
+    #     id: 0
+    # requirements:
+    #     id: '\d{1,3}'
+    # methods: ['POST']
+    # schemes: ['https']
+    # host: api.mondomaine.com
+
+# produit-by-slug:
+#     path: /produit/{slug}
+#     controller: App\Controller\ProduitController::afficheBySlug
+#     requirements:
+#         slug: '[a-z]*'
+
+# inventaires:
+#     path: /{type}/produit
+#     controller: App\Controller\ProduitController::inventaire
+#     defaults:
+#         type: inventaire
+
+
+# produit/12  -> show     GET
+# produit/12  -> update   PATCH
+# produit/12  -> delete   DELETE
